fix incorrect scroll anchors overflow header

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,4 +1,4 @@
-.sidebar{
+.header{
 	position: sticky;
 	top: 0;
 	left: 0;
